--- a/raBiProject/test-output/old/Default suite/methods.html
+++ b/raBiProject/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4c3a9">  <td>21/05/12 23:09:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="rough_class.leave_assign()[pri:0, instance:rough.rough_class@6b7906b3]">leave_assign</td> 
-  <td>main@882471736</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>21/05/12 23:09:41</td>   <td>-2691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;rough_class.setup()[pri:0, instance:rough.rough_class@6b7906b3]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@882471736</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>21/05/29 01:58:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;listeners_addskill.setup()[pri:0, instance:endTOend_raBiProject.listeners_addskill@4233e892]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1260440107</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>21/05/29 01:58:36</td>   <td>11361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="listeners_addskill.add_skills()[pri:0, instance:endTOend_raBiProject.listeners_addskill@4233e892]">add_skills</td> 
+  <td>main@1260440107</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>21/05/29 01:59:25</td>   <td>60548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;listeners_addskill.exitup()[pri:0, instance:endTOend_raBiProject.listeners_addskill@4233e892]">&lt;&lt;exitup</td> 
+<td>&nbsp;</td>  <td>main@1260440107</td>   <td></td> </tr>
 </table>
